--- a/pages/mini-project-1/index.html
+++ b/pages/mini-project-1/index.html
@@ -214,7 +214,7 @@
                                                  <a href="./index.html"> Home </a>
                                                  <span class="px-3 "></span> <a href="#about">About </a></span>
                                                  <span class="px-3 " ></span> <a href="#Services">Services </a></span>
-                                                 <span class="px-3 inline-block"><a href="#Contact">Contact Us </a></span>                                         
+                                                 <span class="px-3 inline-block"><a href="./pages/contact.html">Contact Us </a></span>                                         
                                                </p>
                                           </div>
                                           <div class="p-2 px-5 pt-5 mt-5">
