--- a/pages/mini-project-1/index.html
+++ b/pages/mini-project-1/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Electronic Equipment Repair Services">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <link rel="shortcut icon" href="./" type="image/x-icon">   
+    <link rel="shortcut icon" href="./resources/favicon.png" type="image/x-icon">   
     <link rel="stylesheet" href="./css/miniproject1style.css">  
     <script src="https://kit.fontawesome.com/59d377ced1.js" crossorigin="anonymous"></script>
 </head>
