--- a/pages/mini-project-1/pages/contact.html
+++ b/pages/mini-project-1/pages/contact.html
@@ -150,7 +150,7 @@
                                   <div class="p-2 d-inline-block pt-5 mt-5">
                                           <p class="navfooter">
                                             <a href="../index.html"> Home </a>
-                                            <span class="px-3 "></span> <a href="../index.html#about">About </a></span>
+                                            <span class="px-3 "></span> <a href="../index.html#about" target="_blank">About </a></span>
                                             <span class="px-3 " ></span> <a href="#Services">Services </a></span>
                                             <span class="px-3 inline-block"><a href="./contact.html">Contact Us </a></span>                                         
                                           </p>
