--- a/pages/mini-project-1/index.html
+++ b/pages/mini-project-1/index.html
@@ -38,9 +38,9 @@
                                Services
                              </a>                            
                              <ul class="dropdown-menu">
-                               <li><a class="dropdown-item" href="#">Audio/Video</a></li>
-                               <li><a class="dropdown-item" href="#">Refrigerator</a></li>
-                               <li><a class="dropdown-item" href="#">Industrial Equipment</a></li>
+                               <li><a class="dropdown-item" href="./pages/audio-video.html"target="_blank">Audio/Video</a></li>
+                               <li><a class="dropdown-item" href="./pages/refrigerator.html"target="_blank">Refrigerator</a></li>
+                               <li><a class="dropdown-item" href="./pages/industrial.html"target="_blank">Industrial Equipment</a></li>
                              </ul>
                            </li>
                          </ul>
@@ -64,23 +64,23 @@
                              </button>
                         </a>            
 
-   <div class="container pt-5 px-2 py-5">
-       <div class="row row-cols-2">
+   <div class="container pt-5 px-2">
+       <div class="row labelmain">
              <div class="col">
-                    <div class="d-flex flex-column justify-content-end">
-                           <div class="p-2 px-4 m-5">
+                    <div class="d-flex flex-column justify-content-start">
+                           <div class="p-2 px-4 m-5 d-block contentcsspaddingmobile">
                                    <h2 class="">
                                   Professional Electronic Technician                 
                                    </h2>                              
-                                  <p class="frontads px-4 pt-3">
+                                  <p class="frontads px-4 pt-3 contentcsspaddingmobile">
                                   <i class="fa-solid fa-check"></i>
                                   licensed                              
                                   </p>
-                                  <p class="frontads px-4">
+                                  <p class="frontads px-4 contentcsspaddingmobile">
                                     <i class="fa-solid fa-check"></i>
                                   Reliable                                
                                   </p>
-                                   <p class="frontads px-4">
+                                   <p class="frontads px-4 contentcsspaddingmobile">
                                     <i class="fa-solid fa-check"></i>
                                   Affordable                               
                                  </p>
@@ -212,8 +212,8 @@
                                        <div class="p-2 d-inline-block pt-5 mt-5">
                                                <p class="navfooter">
                                                  <a href="./index.html"> Home </a>
-                                                 <span class="px-3 "></span> <a href="#about">About </a></span>
-                                                 <span class="px-3 " ></span> <a href="#Services">Services </a></span>
+                                                 <span class="px-3 "></span> <a href="#about" >About </a></span>
+                                                 <span class="px-3 " ></span> <a href="./pages/services.html">Services </a></span>
                                                  <span class="px-3 inline-block"><a href="./pages/contact.html">Contact Us </a></span>                                         
                                                </p>
                                           </div>
