--- a/pages/mini-project-1/pages/contact.html
+++ b/pages/mini-project-1/pages/contact.html
@@ -38,9 +38,9 @@
                                Services
                              </a>                            
                              <ul class="dropdown-menu">
-                               <li><a class="dropdown-item" href="#">Audio/Video</a></li>
-                               <li><a class="dropdown-item" href="#">Refrigerator</a></li>
-                               <li><a class="dropdown-item" href="#">Industrial Equipment</a></li>
+                               <li><a class="dropdown-item" href="./audio-video.html">Audio/Video</a></li>
+                               <li><a class="dropdown-item" href="./refrigerator.html">Refrigerator</a></li>
+                               <li><a class="dropdown-item" href="./industrial.html">Industrial Equipment</a></li>
                              </ul>
                            </li>
                          </ul>
@@ -151,7 +151,7 @@
                                           <p class="navfooter">
                                             <a href="../index.html"> Home </a>
                                             <span class="px-3 "></span> <a href="../index.html#about" target="_blank">About </a></span>
-                                            <span class="px-3 " ></span> <a href="#Services">Services </a></span>
+                                            <span class="px-3 " ></span> <a href="./services.html">Services </a></span>
                                             <span class="px-3 inline-block"><a href="./contact.html">Contact Us </a></span>                                         
                                           </p>
                                      </div>
