--- a/pages/mini-project-1/pages/audio-video.html
+++ b/pages/mini-project-1/pages/audio-video.html
@@ -42,8 +42,8 @@
                              </a>                            
                              <ul class="dropdown-menu">
                                <li><a class="dropdown-item active" href="#" aria-current="page">Audio/Video</a></li>
-                               <li><a class="dropdown-item" href="./pages/refrigerator.html" target="_blank">Refrigerator</a></li>
-                               <li><a class="dropdown-item" href="./pages/industrial.html" target="_blank">Industrial Equipment</a></li>
+                               <li><a class="dropdown-item" href="./refrigerator.html" target="_blank">Refrigerator</a></li>
+                               <li><a class="dropdown-item" href="./industrial.html" target="_blank">Industrial Equipment</a></li>
                              </ul>
                            </li>
                          </ul>
