--- a/pages/mini-project-1/pages/services.html
+++ b/pages/mini-project-1/pages/services.html
@@ -85,7 +85,7 @@
                                                                         
                                           </p>
                                            <p class="frontads px-4">
-                                            <a class="dropdown-item navservices" href="./pages/industrial.html" target="_blank">
+                                            <a class="dropdown-item navservices" href="./industrial.html" target="_blank">
                                                 <i class="fa-solid fa-check"></i>
                                                 Industrial Equipment Repair and Services</a>
                                                                       
