--- a/pages/mini-project-1/pages/pricing.html
+++ b/pages/mini-project-1/pages/pricing.html
@@ -166,7 +166,7 @@
                                        <!-- flex box -->
                                           <div class="d-flex flex-row mb-3"> 
                                              <div class="p-2 px-3"> 
-                                                  <a href="./index.html"> Home </a>
+                                                  <a href="../index.html"> Home </a>
                                                   
                                                </div>
                                               <div class="p-2 px-3">   
