--- a/pages/mini-project-1/index.html
+++ b/pages/mini-project-1/index.html
@@ -74,7 +74,7 @@
                                    </h2>                              
                                   <p class="frontads px-4 pt-3 contentcsspaddingmobile">
                                   <i class="fa-solid fa-check"></i>
-                                  licensed                              
+                                  Certified Electronic Technician                             
                                   </p>
                                   <p class="frontads px-4 contentcsspaddingmobile">
                                     <i class="fa-solid fa-check"></i>
