--- a/pages/mini-project-1/index.html
+++ b/pages/mini-project-1/index.html
@@ -225,7 +225,7 @@
                                                      </div>
                                                      
                                                      <div class="p-2 px-3">
-                                                        <a href="./pages/services.html">Contact Us </a>  
+                                                        <a href="./pages/contact.html">Contact Us </a>  
                                                      </div>                       
                                                 </div>
                                                       
