--- a/pages/mini-project-1/pages/contact.html
+++ b/pages/mini-project-1/pages/contact.html
@@ -38,9 +38,9 @@
                                Services
                              </a>                            
                              <ul class="dropdown-menu">
-                               <li><a class="dropdown-item" href="./audio-video.html">Audio/Video</a></li>
-                               <li><a class="dropdown-item" href="./refrigerator.html">Refrigerator</a></li>
-                               <li><a class="dropdown-item" href="./industrial.html">Industrial Equipment</a></li>
+                               <li><a class="dropdown-item" href="./audio-video.html" target="_blank">Audio/Video</a></li>
+                               <li><a class="dropdown-item" href="./refrigerator.html" target="_blank">Refrigerator</a></li>
+                               <li><a class="dropdown-item" href="./industrial.html" target="_blank">Industrial Equipment</a></li>
                              </ul>
                            </li>
                          </ul>
