--- a/pages/mini-project-1/pages/pricing.html
+++ b/pages/mini-project-1/pages/pricing.html
@@ -52,8 +52,9 @@
 
                
                 <section class="main bg-white pt-5 px-5 pb-5 ">
-                    <div class="">
-                       <h2 class="pricingheader">We will provide you the affordable estimated price once you provide us the details.</h2>
+                    <div class="container-fluid">
+                       <h2 class="pricingheader">We will provide you the affordable estimated 
+                                       price once you provide us the details.</h2>
                          <div class="col-md-7 pt-5 mb-4 ">
                            <div class="contact-form">
                              <form action="">
@@ -65,7 +66,7 @@
                                      class="form-control form-control-lg fst-italic fs-6 border shadow-sm"
                                    />
                                  </div>
-                                 <div class="col-lg-6 mb-4">
+                                 <div class="col-6 mb-4">
                                    <input
                                      type="text"
                                      placeholder="Your Email"
@@ -74,7 +75,7 @@
                                  </div>
                                </div>
                                <div class="row">
-                                 <div class="col-lg-12 mb-4">
+                                 <div class="col-6 mb-4">
                                   <!-- dropdown menu starts here -->
                                       <select class="form-select form-control-lg fst-italic fs-6 border shadow-sm"
                                              input-type="text"
@@ -89,7 +90,7 @@
                                    <!-- drop down menu ends here -->
                                  </div>
                                  <div class="row">
-                                  <div class="col-lg-12 mb-4">
+                                  <div class="col-11 mb-4">
                                     <input
                                       type="text"
                                       placeholder="Brand and model?"
@@ -99,7 +100,7 @@
                                   <div class="row">
                                     <!-- drop down menu starts here -->
                                   
-                                    <div class="col-lg-12 mb-4">
+                                    <div class="col-12 mb-4">
                                       <select class="form-select form-control-lg fst-italic fs-6 border shadow-sm"
                                           input-type="text"
                                          aria-label="Default select example">
@@ -123,7 +124,7 @@
                                   />
                                 </div>
                                 <div class="row">            
-                                  <div class="col-lg-12 mb-4">
+                                  <div class="col-lg-14 mb-4">
                                     <input
                                       type="text"
                                       placeholder="mobile number"
