--- a/pages/mini-project-1/pages/pricing.html
+++ b/pages/mini-project-1/pages/pricing.html
@@ -63,21 +63,22 @@
                                    <input
                                      type="text"
                                      placeholder="Your Name"
-                                     class="form-control form-control-lg fst-italic fs-6 border shadow-sm"
+                                     class="form-control form-control-lg fst-italic fs-6 border shadow-sm formlenghtsmall"
                                    />
                                  </div>
                                  <div class="col-6 mb-4">
                                    <input
                                      type="text"
                                      placeholder="Your Email"
-                                     class="form-control form-control-lg fst-italic fs-6 border shadow-sm"
+                                     class="form-control form-control-lg fst-italic fs-6 border shadow-sm formlenghtsmall"
                                    />
                                  </div>
                                </div>
                                <div class="row">
                                  <div class="col-6 mb-4">
                                   <!-- dropdown menu starts here -->
-                                      <select class="form-select form-control-lg fst-italic fs-6 border shadow-sm"
+                                      <select class="form-select form-control-lg fst-italic fs-6 
+                                                    border shadow-sm formlength"
                                              input-type="text"
                                             aria-label="Default select example">
                                            <option selected>What is your Device type?</option>
@@ -94,14 +95,14 @@
                                     <input
                                       type="text"
                                       placeholder="Brand and model?"
-                                      class="form-control form-control-lg fst-italic fs-6 border shadow-sm"
+                                      class="form-control form-control-lg fst-italic fs-6 border shadow-sm formlength"
                                     />
                                   </div>
                                   <div class="row">
                                     <!-- drop down menu starts here -->
                                   
                                     <div class="col-12 mb-4">
-                                      <select class="form-select form-control-lg fst-italic fs-6 border shadow-sm"
+                                      <select class="form-select form-control-lg fst-italic fs-6 border shadow-sm formlength"
                                           input-type="text"
                                          aria-label="Default select example">
                                         <option selected>What type of service you need?</option>
@@ -120,7 +121,7 @@
                                   <input
                                     type="text"
                                     placeholder="Your location"
-                                    class="form-control form-control-lg fst-italic fs-6 border shadow-sm"
+                                    class="form-control form-control-lg fst-italic fs-6 border shadow-sm formlength"
                                   />
                                 </div>
                                 <div class="row">            
@@ -128,15 +129,15 @@
                                     <input
                                       type="text"
                                       placeholder="mobile number"
-                                      class="form-control form-control-lg fst-italic fs-6 border shadow-sm"
+                                      class="form-control form-control-lg fst-italic fs-6 border shadow-sm formlength"
                                     />
                                   </div>
                                <div class="row">
-                                 <div class="col-lg-12 mb-4">
+                                 <div class="col-lg-12 mb-4 ">
                                    <textarea
                                      rows="4"
                                      placeholder="Your Message"
-                                     class="form-control form-control-lg fst-italic fs-6 border shadow-sm"
+                                     class="form-control form-control-lg fst-italic fs-6 border shadow-sm formlength"
                                    ></textarea>
                                  </div>
                                </div>
