--- a/pages/mini-project-1/pages/pricing.html
+++ b/pages/mini-project-1/pages/pricing.html
@@ -1,31 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8">
+    
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>BossJo Electronics</title>
     <meta name="description" content="Electronic Equipment Repair Services">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" 
-    integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <link rel="shortcut icon" href="../resources/favicon.png" type="image/x-icon">   
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+
+    <link rel="shortcut icon" href="../resources/favicon.png" type="image/x-icon">  
     <link rel="stylesheet" href="../css/miniproject1style.css">  
     <script src="https://kit.fontawesome.com/59d377ced1.js" crossorigin="anonymous"></script>
 </head>
 
    <body>
              <header>
-               <section class="navbackground">
+               <section class="navbackground container-fluid mx-auto">
                   <nav class="navbar navbar-expand-lg bg-body-tertiary navbackground">
                      <div class="container-fluid navbackground">
-                       <a class="navbar-brand px-3" href="../index.html#about" target="_blank"><span class="businesslogo"><h1>BossJo Electronics</h1></span></a>
+                       <a class="navbar-brand" href="../index.html#about"><span class="businesslogo"><h1>BossJo Electronics</h1></span></a>
                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                          <span class="navbar-toggler-icon"></span>
                        </button>
-                       <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                       <div class="collapse navbar-collapse" id="navbarNavDropdown" >
                          <ul class="navbar-nav">
-                           <li class="nav-item">
-                             <a class="nav-link" href="../index.html">Home</a>
+                           <li class="nav-item ">
+                             <a class="nav-link" href="../index.html" >Home</a>
                            </li>
                            <li class="nav-item">
                              <a class="nav-link" href="# active" aria-current="page">Pricing</a>
@@ -34,13 +34,13 @@
                             <a class="nav-link" href="./contact.html">Contact</a>
                           </li>
                            <li class="nav-item dropdown">
-                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                             <a class="nav-link dropdown-toggle" href="./services.html" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                Services
                              </a>                            
                              <ul class="dropdown-menu">
-                               <li><a class="dropdown-item" href="./audio-video.html" target="_blank">Audio/Video</a></li>
-                               <li><a class="dropdown-item" href="./refrigerator.html" target="_blank">Refrigerator</a></li>
-                               <li><a class="dropdown-item" href="./industrial.html" target="_blank">Industrial Equipment</a></li>
+                               <li><a class="dropdown-item" href="./audio-video.html"target="_blank">Audio/Video</a></li>
+                               <li><a class="dropdown-item" href="./refrigerator.html"target="_blank">Refrigerator</a></li>
+                               <li><a class="dropdown-item" href="./industrial.html"target="_blank">Industrial Equipment</a></li>
                              </ul>
                            </li>
                          </ul>
@@ -48,7 +48,7 @@
                      </div>
                    </nav>
                  </section>
-              </header>
+             </header>
 
                
                 <section class="main bg-white pt-5 px-5 pb-5 ">
