--- a/pages/mini-project-1/pages/contact.html
+++ b/pages/mini-project-1/pages/contact.html
@@ -183,7 +183,7 @@
                            </div>
                             <!-- next third item container -->
                             <div class="col d-block navpaddingitem">
-                                  <div class="d-flex flex-row mb-3 pt-1 navpaddingitem">  
+                                  <div class="d-flex flex-row mb-3 pt-1">  
                                        
                                        <div class="p-2 d-block px-md-5 px-sm-5 px-xl-3">                                 
                                               <a class="btn btn-outline-primary" href="https://www.facebook.com/profile.php?id=100089248346059" target="_blank" role="button" >
