--- a/pages/mini-project-1/index.html
+++ b/pages/mini-project-1/index.html
@@ -150,10 +150,10 @@
   <!--------container-->
            </section>
                 <!-------------Servicing section ends here------------>
-                <section id="about" class="container-fluid px-5 mx-auto">
+                <section id="about" class="container-fluid mx-auto aboutuspadding">
                          <!--------------------------About Section ------------->
                    <div>                                      
-                           <div class="container justify-content-center px-5 pt-5">
+                           <div class="container justify-content-center pt-5 aboutuspadding">
                                  <div class="row">
                                      <div class="col">
                                            <h4 class="text-center">
