--- a/pages/mini-project-1/pages/services.html
+++ b/pages/mini-project-1/pages/services.html
@@ -118,7 +118,7 @@
                                          <a href="../index.html#about">About</a> 
                                         </div>
                                        <div class="p-2 navpaddingitem">     
-                                            <a href="#">Pricing </a>
+                                            <a href="./pricing.html">Pricing </a>
                                         </div>                                          
                                        
                                         <div class="p-2 navpaddingitem">   
