--- a/pages/mini-project-1/pages/contact.html
+++ b/pages/mini-project-1/pages/contact.html
@@ -85,7 +85,7 @@
                                       </div>
                                     </div><!----flex item contaner 1------->                               
                                  <!-- item container 2 -->
-                                 <div class="col" >
+                                 <div class="col contactpic" >
                                       <p>
                                          <div class="card" style="width: auto; height: auto; justify-content: center;">
                                          <img src="../resources/repairman-2.jpg" alt="officepic" class="w-100 d-block mx-auto";>
