--- a/pages/mini-project-1/pages/pricing.html
+++ b/pages/mini-project-1/pages/pricing.html
@@ -92,8 +92,12 @@
                                                 <option value="1">LCD/LED TV</option>
                                                 <option value="2">Amplifier</option>
                                                 <option value="3">Refrigerator</option>
+                                                <option value="3">Aircon Window Type</option>
+                                                <option value="3">Aircon Split-Type</option>
+                                                <option value="3">Aircon Tower-Type</option>
                                                 <option value="3">Kitchen Appliances</option>
                                                 <option value="3">Indsutrial Equipment</option>
+                                                
                                            </select> 
                                         <!-- drop down menu ends here -->
                                       </div>
