--- a/pages/mini-project-1/pages/services.html
+++ b/pages/mini-project-1/pages/services.html
@@ -81,7 +81,7 @@
                                              <p class="frontads">
                                                <a class="dropdown-item navservices" href="./refrigerator.html" target="_blank">
                                                    <i class="fa-solid fa-check"></i>
-                                                   Refrigerator Repair and Services</a>
+                                                   Aircon & Refrigerator Repair and Services</a>
                                                                            
                                              </p>
                                               <p class="frontads">
