--- a/pages/mini-project-1/index.html
+++ b/pages/mini-project-1/index.html
@@ -39,7 +39,7 @@
                              </a>                            
                              <ul class="dropdown-menu">
                                <li><a class="dropdown-item" href="./pages/audio-video.html"target="_blank">Audio/Video</a></li>
-                               <li><a class="dropdown-item" href="./pages/refrigerator.html"target="_blank">Refrigerator</a></li>
+                               <li><a class="dropdown-item" href="./pages/refrigerator.html"target="_blank">Aircon & Ref.</a></li>
                                <li><a class="dropdown-item" href="./pages/industrial.html"target="_blank">Industrial Equipment</a></li>
                              </ul>
                            </li>
