--- a/pages/mini-project-1/pages/refrigerator.html
+++ b/pages/mini-project-1/pages/refrigerator.html
@@ -39,7 +39,7 @@
                              </a>                            
                              <ul class="dropdown-menu">
                                <li><a class="dropdown-item" href="./audio-video.html" target="_blank">Audio/Video</a></li>
-                               <li><a class="dropdown-item" href="# active" aria-current="page">Refrigerator</a></li>
+                               <li><a class="dropdown-item" href="# active" aria-current="page">Aircon & Ref.</a></li>
                                <li><a class="dropdown-item" href="./industrial.html"target="_blank">Industrial Equipment</a></li>
                              </ul>
                            </li>
