--- a/pages/mini-project-1/index.html
+++ b/pages/mini-project-1/index.html
@@ -178,7 +178,7 @@
                                                        Our Technician
                                                       </h5> 
                                                     <p class="container-fluid mx-auto"> 
-                                                        Is License Certified Electronic Technician and the best with their experties.
+                                                        Is Licensed Profesional Certified Electronic Technician and the best with their experties.
                                                     </p>
                                                 </p>
                                            </div>
