--- a/pages/projects/Accordion Assigment/Index.html
+++ b/pages/projects/Accordion Assigment/Index.html
@@ -14,7 +14,7 @@
         <div class="fixed-top"> 
                 <nav class="navbar navbar-expand-lg bg-primary">  
                     <div class="container-fluid">
-                      <img src="../resources/ada.png" alt="logo" height="50px" class="p-lg-1">
+                      <img src="./Resources/favicon.png" alt="logo" height="50px" class="p-lg-1">
                       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                       </button>
