--- a/pages/Technical Assessment/index.html
+++ b/pages/Technical Assessment/index.html
@@ -7,7 +7,16 @@
     <title>Kodego Technical Assessment </title>
 </head>
 <body>
+<!-- wrritten exam enanswers: link 
+https://docs.google.com/document/d/1pRFmCWPTa9jcn5q1LKoZvODggOe2rkljUylVGiJiHys/edit?usp=sharing
+ -->
+
+ <!-- 
+https://docs.google.com/document/d/1pRFmCWPTa9jcn5q1LKoZvODggOe2rkljUylVGiJiHys/edit?usp=sharing
+  -->
+
     "Hello Word"
     <script src="script.js"></script>
 </body>
 </html>
+
