--- a/test.html
+++ b/test.html
@@ -440,7 +440,7 @@
       </div>  
           <!----------project card ends here-----------------> 
                  <!----------Footer section starts here-----------------> 
-                     <footer class="bg-dark-subtle container-fluid mb-0 footersection">     
+                     <footer class="bg-dark-subtle container-fluid mb-0 ">     
                         <div class="d-flex justify-content-around footercContainerMobileRes">
                                 <div class="d-flex flex-row mb-3 footerNavMobileRes">
                                       <div class="p-2">
