--- a/pages/about.html
+++ b/pages/about.html
@@ -362,7 +362,7 @@
                          
                     </div>
                   
-                    <div class="p-2 justify-content-center">
+                    <div class="p-2 align-self-center">
                             <a class="btn btn-outline-primary m-4" href="https://www.facebook.com/profile.php?id=100089248346059" target="_blank" role="button" >
                                <img src="./resources/facebook.png" alt="facebook logo" style="width:20px;height:20px;">
                             </a>                                   
