--- a/pages/projects.html
+++ b/pages/projects.html
@@ -311,7 +311,7 @@
                       
                  </div>
                
-                 <div class="p-2 align-self-start">
+                 <div class="p-2 align-self-center">
                          <a class="btn btn-outline-primary m-4" href="https://www.facebook.com/profile.php?id=100089248346059" target="_blank" role="button" >
                             <img src="./resources/facebook.png" alt="facebook logo" style="width:20px;height:20px;">
                          </a>                                   
