--- a/pages/about.html
+++ b/pages/about.html
@@ -337,7 +337,8 @@
 
   
      </section> 
-        <footer class="bg-dark-subtle container-fluid mb-0 footersection">     
+  <section class="footerAllPage">
+        <footer class="bg-dark-subtle container-fluid mb-0">     
             <div class="d-flex justify-content-around footercContainerMobileRes ">
                     <div class="d-flex flex-row mb-3 footerNavMobileRes">
                           <div class="p-2">
@@ -374,7 +375,8 @@
                             </a> 
                     </div>                     
             </div> 
-         </footer>
+          </footer>
+      </section>
         <!----------footer section ends here-----------------> 
          <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" 
          integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous">
