--- a/pages/blog.html
+++ b/pages/blog.html
@@ -45,7 +45,24 @@
               </nav>
         </header>  
         <section>
-            <h1 class="display-5 family $font-family-base:Trebuchet MS">Blog</h1> 
+               <!-- <div class="d-flex w-100 justify-content-center pt-4">
+                     <div class="d-flex  w-75">
+                           <div class="w-100">
+                               <h1 class="display-5 family $font-family-base:Trebuchet MS">Blog</h1> 
+                               <hr>
+                           </div>
+                     </div>
+              </div> -->
+               <h2 class="text-center pt-5">My Kodego Journey</h2>
+              <div class="d-flex w-100 justify-content-center pt-1">
+                    <div class="d-flex  w-75">
+                         
+                          <div class="w-100">
+                              <hr>
+                              <p><span class="blog-content-firts-line">content here</span>content here</p> 
+                          </div>
+                    </div>
+             </div>
         </section>
         <section class="footerAllPage">
               <footer class="bg-dark-subtle container-fluid mb-0">     
