--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link href="./css/mainpagestyle.css" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/59d377ced1.js" crossorigin="anonymous"></script>
   </head>
   <body class="background">
         
@@ -55,7 +56,7 @@
                          </a>
                   </div> 
                   <!-- flex container 1 -->
-            <p class="flexcontainer">
+            <div class="flexcontainer pb-5">
                 <div class="d-flex flex-lg-row flex-md-column flex-sm-column
                             mt-2 mainpageflexcontainer container-fluid justify-content-center">
                     <div class="p-0">
@@ -99,7 +100,39 @@
                         </h1>
                     </div> 
             </div>
-        </p>     
+                <div class="d-flex justify-content-end w-75">
+                    <div class="d-flex flex-row">
+                        <div class="px-2">
+                                 <div class=""> 
+                                       <a href="./resources/resume.pdf" target="_blank" class="px-2 resume-link">
+                                        <p class="resume">Resume</p>
+                                            <img src="./resources/resume-icon.png" width="35px">                               
+                                       </a>
+                                </div>                               
+                        </div class="px-2">
+                        <div class="px-2">
+                              <div class=""> 
+                                <a href="https://www.linkedin.com/in/joel-siroy-0a11ba58/
+                                        " target="_blank" class="linkIn-link">
+                                        <p class="linkIn">LinkIn</p>
+                                   <img src="./resources/linkID.png" width="35px">
+                               </a>
+                             </div> 
+                        </div>
+                        <div class="px-2">
+                               <div class=""> 
+                                   <a href="https://github.com/jsiroy" target="_blank" class="gitHub-link">
+                                    <p class="gitHub">GitHub</p>
+                                      <img src="./resources/Octicons-mark-github.svg.png" width="35px">
+                                  </a>
+                              </div> 
+                        </div>
+                        <!-- <div class="px-2">
+                          <a href="./resources/resume.pdf" target="_blank"><p>Git Hub</p></a>
+                        </div> -->
+                    </div>
+                </div>
+          </div>     
           <!--------mainpage content ends here ------->
           <section>
         <section class="about">
@@ -153,7 +186,7 @@
                           <button class="accordion-button collapsed background" type="button" 
                            data-bs-toggle="collapse" data-bs-target="#flush-collapsetwo" aria-expanded="false" 
                            aria-controls="flush-collapsetwo">
-                           <span class="hovercolor">Work
+                           <span class="hovercolor">Work Experience
                            </span>
                           </button>
                       </h2>        
