edit about and blog page

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -57,9 +57,21 @@
               <div class="d-flex w-100 justify-content-center pt-1">
                     <div class="d-flex  w-75">
                          
-                          <div class="w-100">
-                              <hr>
-                              <p><span class="blog-content-firts-line">content here</span>content here</p> 
+                          <div class="w-100 pt-4">
+                              <p><span class="blog-content-firts-line">I am a career shifter,</span>I am a career shifter, seeking an opportunity as a web developer. When I got the chance to learn coding through Kodego, I also discovered my passion for building small electronic assemblies, creating electrical layouts, networking, planning layouts using SketchUp, and even undertaking household modifications like welding and masonry. All these hard skills I acquired were also applied in my previous role as a Technical Head Supervisor. Over time, through training and experience, I honed my soft skills as a team leader. It was my responsibility to assign tasks to my team members, ensuring timely completion to meet deadlines. This experience taught me the importance of a strong sense of responsibility and effective team management. It required special analytical skills to solve and handle problems between team members, employers, and clients, and these skills have proven valuable throughout my Kodego Journey.
+                               </p>
+                                <p>
+                                I started my Kodego Journey with a basic knowledge of HTML, but my passion for developing things drove me to focus on building web applications. In the first month, we covered lessons on HTML5, CSS, semantic layout, and Bootstrap, which all revolved around front-end development. I grasped these concepts quite well. However, my coding struggle began when we delved into Vanilla JavaScript. Some activities required extra effort and time to fully comprehend, but through hard work and dedication, I started to understand. Yet, I still felt there was much more to learn.
+                                </p>
+                                <p>
+                                Then came the introduction of the back-end side with ExpressJS running on the Node.js runtime environment. I was excited because we were entering the realm of APIs. However, I faced challenges with ExpressJS and its MVC format. Later, ReactJS, a front-end framework following a similar MVC format, was introduced. This posed another challenge as it required routing. Meanwhile, our Capstone project was approaching, and I encountered issues with my team member assigned to the back-end. Not hearing any progress updates from them, I had to make a difficult decision. I chose to take charge and handle both the front-end and back-end myself. I assigned my other team member to tasks that I couldn't handle alone, such as CSS, mobile responsiveness, and content creation.
+                                </p>
+                                <p>
+                                Working with just two team members was a significant challenge, considering the limited time and resources we had. Analyzing our situation, I prioritized the project's structure and functionality, gradually polishing the CSS and ensuring mobile responsiveness. Fortunately, we were able to meet the deadline and present our project, even though some features like tokens, form validation, and design were not perfected. Despite the challenges, we earned the recognition for the best capstone project, and I was honored as the best team leader.
+                                </p>
+                                <p>
+                                Our Capstone project, called KodeSimple, is an Online POS platform. We built it from scratch using the MERN stack (MongoDB, ExpressJS, ReactJS, NodeJS) along with React Bootstrap and CSS for styling and mobile responsiveness. Thank you for taking the time to read my story. If you're interested and curious about our Capstone project, please visit the following link: <a href="https://kodesimple.vercel.app/home" target="_blank"><span class="capstone-link">KodeSimple</span></a>
+                                </p>
                           </div>
                     </div>
              </div>
