--- a/pages/projects.html
+++ b/pages/projects.html
@@ -46,9 +46,12 @@
               </header>  
       <!----------Projects section starts here---->
       <section class="projects"> 
-        <h3 class="px-4 pt-5">Projects</h3> 
-          
-           <hr> 
+                <!-- <div class="w-100 d-flex justify-content-center">
+                    <div class="w-75">
+                        <h3 class="px-4 pt-5">Projects</h3>   
+                        <hr> 
+                    </div>
+                </div> -->
            <div class="accordion accordion-flush" id="accordionFlushExample">
               <div class="accordion-item background">
                 <!-- <h2 class="accordion-header px-4" id="flush-headingfive">
@@ -65,11 +68,11 @@
                         <section id="myprojects"> -->
                                 <p>
                                    <!------project cards starts here-------->   
-                                       <span class="d-block w-100">
+                                       <span class="d-block w-100 pt-5">
                                                  <h3 class="text text-center">Kodego Projects
                                                 </h3>
                                                 </span>
-                                                <div class="container text-center">
+                                                <div class="container text-center pt-4">
                                                     <div class="row justify-content-center gx-5 skillcontainer">
                                                          <div class="col" >      
                                                             <p>
