--- a/pages/blog.html
+++ b/pages/blog.html
@@ -9,12 +9,12 @@
     <link rel="stylesheet" href="../css/mainpagestyle.css">
   </head>
 
-  <body class="background">
+  <body class="background blog-background-image">
         <header>
            
             <!----------------Navigation Bar Area-------------------->
 
-                <nav class="navbar navbar-expand-lg bg-dark-subtle sticky-top">
+                <nav class="navbar navbar-expand-lg navbarColor sticky-top">
                   <div class="container-fluid">
                       <img src="../resources/favicon.png" alt="JSI logo" height="50px">
                       
