--- a/pages/contact.html
+++ b/pages/contact.html
@@ -14,7 +14,7 @@
            
             <!----------------Navigation Bar Area-------------------->
 
-                <nav class="navbar navbar-expand-lg bg-dark-subtle sticky-top">
+                <nav class="navbar navbar-expand-lg navbarColor sticky-top">
                   <div class="container-fluid">
                       <img src="../resources/favicon.png" alt="JSI logo" height="50px">
                       
