update contact form and emailjs

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -7,6 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="shortcut icon" href="../resources/favicon.png" type="image/x-icon"> 
     <link rel="stylesheet" href="../css/mainpagestyle.css">
+    <script src="https://kit.fontawesome.com/59d377ced1.js" crossorigin="anonymous"></script>
   </head>
 
   <body class="background">
@@ -45,7 +46,74 @@
               </nav>
         </header>  
         <section>
-            <h1 class="display-5 family $font-family-base:Trebuchet MS">Contact</h1> 
+             <div class="w-100 d-flex justify-content-center pt-5">
+                   <div class="w-75 bg-body-emphasis contact-info-container-main pt-5">
+                      <div class="d-flex justify-content-center flex-row contact-info-container ">
+                            <div class="w-50 container-fluid container-info-items ">
+                                 <div class="px-5 pt-3 d-flex flex-column container-fluid">
+                                    <div class="">
+                                      <h class="display-6 family $font-family-base:Trebuchet MS">Contact Info</h> 
+                                    </div>
+                                      <hr>
+                                     <div class="pt-4 d-flex flex-row">
+                                         <div class="contact-icon">
+                                              <i class="fa-solid fa-location-dot fa-xl"></i>
+                                         </div>
+                                         <div class="contact-info-text">
+                                             <h class="display-7 family $font-family-base:Trebuchet MS px-3">Marilao Bulacan, <span class="my-location">Philppines</span></h> 
+                                        </div>
+                                     </div>
+                                     <div class="pt-4 d-flex flex-row">
+                                        <div class="contact-icon">
+                                            <i class="fa-solid fa-phone fa-2xl"></i>
+                                        </div>
+                                        <div class="contact-info-text">
+                                            <h class="display-7 family $font-family-base:Trebuchet MS px-3">+63 943 0375675</h> 
+                                        </div>
+                                   </div>
+                                   <div class="pt-4 d-flex flex-row">
+                                        <div class="contact-icon">
+                                            <i class="fa-solid fa-envelope fa-xl"></i>
+                                        </div>
+                                        <div class="contact-info-text">
+                                            <h class="display-7 family $font-family-base:Trebuchet MS px-3"><a href="joel.siroy@gmail.com">joel.siroy@gmail.com</a></h> 
+                                        </div>
+                                   </div >
+                                   <div class="pt-4 d-flex flex-row">
+                                        <div class="contact-icon">
+                                            <i class="fa-brands fa-linkedin-in fa-xl"></i>
+                                        </div>
+                                        <div class="contact-info-text">
+                                            <h class="display-7 family $font-family-base:Trebuchet MS px-3"><a href="https://www.linkedin.com/in/joel-siroy-0a11ba58/" target="_blank">My Link-In</a></h>
+                                        </div>     
+                                   </div>
+                                   <div class="pt-4 d-flex flex-row">
+                                        <div class="contact-icon">
+                                           <i class="fa-brands fa-facebook-f fa-xl"></i>
+                                        </div> 
+                                        <div class="contact-info-text">
+                                            <h class="display-7 family $font-family-base:Trebuchet MS px-3"><a href="https://www.facebook.com/joel.siroy/" target="_blank">My Facebook</a></h> 
+                                        </div>  
+                                   </div>
+                                   <div class="pt-4 pb-5 d-flex flex-row">
+                                         <div class="contact-icon">
+                                            <i class="fa-brands fa-github fa-2xl"></i> 
+                                         </div>
+                                         <div class="contact-info-text"> 
+                                            <h class="display-7 family $font-family-base:Trebuchet MS px-3"><a href="https://github.com/jsiroy" target="_blank">My Github Link</a></h> 
+                                         </div> 
+                                   </div>
+                                 </div>
+                              </div>
+                              <div class=" w-50 d-flex container-fluid justify-content-center container-info-items ">
+                                   <div class="embed-responsive google-map d-flex align-items-center">
+                                     <iframe class="embed-responsive-item google-map-frame" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d30861.81537960829!2d120.97398878984373!3d14.784405462860548!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3397ae0757f34ccb%3A0xbe7e2fe29fab83a3!2sPrenza%20II%2C%20Novaliches%2C%20Marilao%2C%20Bulacan!5e0!3m2!1sen!2sph!4v1689335277775!5m2!1sen!2sph" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                                   </div> 
+                             </div>
+                      </div>
+                   </div>
+             </div>
+                  
         </section>
         <section class="footerAllPage">
                 <footer class="bg-dark-subtle container-fluid mb-0 footersection">     
