--- a/pages/contact.html
+++ b/pages/contact.html
@@ -82,7 +82,7 @@
                                    </div >
                                    <div class="pt-4 d-flex flex-row">
                                         <div class="contact-icon">
-                                            <i class="fa-brands fa-linkedin-in fa-xl"></i>
+                                            <i class="fa-brands fa-linkedin-in fa-2xl"></i>
                                         </div>
                                         <div class="contact-info-text">
                                             <h class="display-7 family $font-family-base:Trebuchet MS px-3"><a href="https://www.linkedin.com/in/joel-siroy-0a11ba58/" target="_blank">My Link-In</a></h>
@@ -90,7 +90,7 @@
                                    </div>
                                    <div class="pt-4 d-flex flex-row">
                                         <div class="contact-icon">
-                                           <i class="fa-brands fa-facebook-f fa-xl"></i>
+                                           <i class="fa-brands fa-facebook-f fa-2xl"></i>
                                         </div> 
                                         <div class="contact-info-text">
                                             <h class="display-7 family $font-family-base:Trebuchet MS px-3"><a href="https://www.facebook.com/joel.siroy/" target="_blank">My Facebook</a></h> 
