some adjument on icon footer size

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -58,7 +58,7 @@
                                       <hr>
                                      <div class="pt-4 d-flex flex-row">
                                          <div class="contact-icon">
-                                              <i class="fa-solid fa-location-dot fa-xl"></i>
+                                              <i class="fa-solid fa-location-dot fa-2xl"></i>
                                          </div>
                                          <div class="contact-info-text">
                                              <h class="display-7 family $font-family-base:Trebuchet MS px-3">Marilao Bulacan, <span class="my-location">Philppines</span></h> 
