--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                               </div>
                                 <div class="pb-2">
                                      <div>
-                                        <label class="w-100" for="email">Email address</label>
+                                        <label class="w-100" for="email">Email Address</label>
                                      </div> 
                                      <div>
                                         <input class="w-100" type="email" name="email" required />
