--- a/pages/contact.html
+++ b/pages/contact.html
@@ -77,7 +77,7 @@
                                             <i class="fa-solid fa-envelope fa-xl"></i>
                                         </div>
                                         <div class="contact-info-text">
-                                            <h class="display-7 family $font-family-base:Trebuchet MS px-3"><a href="joel.siroy@gmail.com">joel.siroy@gmail.com</a></h> 
+                                            <h class="display-7 family $font-family-base:Trebuchet MS px-3"><a class="contact-info-link" target="_blank" href="mailto:joel.siroy@gmail.com">joel.siroy@gmail.com</a></h> 
                                         </div>
                                    </div >
                                    <div class="pt-4 d-flex flex-row">
@@ -85,7 +85,7 @@
                                             <i class="fa-brands fa-linkedin-in fa-2xl"></i>
                                         </div>
                                         <div class="contact-info-text">
-                                            <h class="display-7 family $font-family-base:Trebuchet MS px-3"><a href="https://www.linkedin.com/in/joel-siroy-0a11ba58/" target="_blank">My Link-In</a></h>
+                                            <h class="display-7 family $font-family-base:Trebuchet MS px-3"><a class="contact-info-link" target="_blank" href="https://www.linkedin.com/in/joel-siroy-0a11ba58/" target="_blank">My Link-In</a></h>
                                         </div>     
                                    </div>
                                    <div class="pt-4 d-flex flex-row">
@@ -93,7 +93,7 @@
                                            <i class="fa-brands fa-facebook-f fa-2xl"></i>
                                         </div> 
                                         <div class="contact-info-text">
-                                            <h class="display-7 family $font-family-base:Trebuchet MS px-3"><a href="https://www.facebook.com/joel.siroy/" target="_blank">My Facebook</a></h> 
+                                            <h class="display-7 family $font-family-base:Trebuchet MS px-3"><a class="contact-info-link" target="_blank" href="https://www.facebook.com/joel.siroy/" target="_blank">My Facebook</a></h> 
                                         </div>  
                                    </div>
                                    <div class="pt-4 pb-5 d-flex flex-row">
@@ -101,7 +101,7 @@
                                             <i class="fa-brands fa-github fa-2xl"></i> 
                                          </div>
                                          <div class="contact-info-text"> 
-                                            <h class="display-7 family $font-family-base:Trebuchet MS px-3"><a href="https://github.com/jsiroy" target="_blank">My Github Link</a></h> 
+                                            <h class="display-7 family $font-family-base:Trebuchet MS px-3"><a class="contact-info-link" target="_blank" href="https://github.com/jsiroy" target="_blank">My Github Link</a></h> 
                                          </div> 
                                    </div>
                                  </div>
