--- a/index.html
+++ b/index.html
@@ -62,20 +62,20 @@
                   <div class="collapse navbar-collapse mx-auto" id="navbarNav">
                     <ul class="navbar-nav">
                       <li class="nav-item px-3 navbarResponsivePadding">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        <a class="nav-link nav-header active" aria-current="page" href="#">Home</a>
                       </li>
                       <li class="nav-item px-3 navbarResponsivePadding">
-                        <a class="nav-link"  href="./pages/about.html">About</a>
+                        <a class="nav-link nav-header"  href="./pages/about.html">About</a>
                       </li>
                       <li class="nav-item px-3 navbarResponsivePadding">
-                        <a class="nav-link" href="./pages/projects.html">Projects</a>
+                        <a class="nav-link nav-header" href="./pages/projects.html">Projects</a>
                       </li>
                       <li class="nav-item px-3 navbarResponsivePadding">
-                        <a class="nav-link" href="./pages/blog.html">Blog</a>
+                        <a class="nav-link nav-header" href="./pages/blog.html">Blog</a>
                       </li>
 
                       <li class="nav-item px-3 navbarResponsivePadding">
-                        <a class="nav-link" href="./pages/contact.html">Contact</a>
+                        <a class="nav-link nav-header" href="./pages/contact.html">Contact</a>
                       </li>
                     </ul>
                 </div>
