--- a/pages/projects.html
+++ b/pages/projects.html
@@ -56,7 +56,7 @@
                                                      </h3>
                                                 </span>
 
-                                        <div class="container text-center pt-4 w-100">
+                                        <div class="container text-center w-100">
                                                 <div class="d-flex flex-wrap w-100 skillcontainer">
                                                          <div class="col" >      
                                                             <p>
@@ -96,7 +96,7 @@
                                                                              <img src="../resources/capstone.jpg" alt="adobe logo"height="220px" width="370px" >
                                                                          </div>
                                                                          <p>
-                                                                            Capstone                  
+                                                                            Capstone Project                
                                                                          </p> 
                                                                      </div> 
                                                                  </p>    
