edit about me work experience

--- a/index.html
+++ b/index.html
@@ -308,9 +308,9 @@
                     
                                   <ul>
                                        <p>
-                                           <li class="list">Present - Business Owner BossJo Electonics</li>
+                                           <li class="list">Present - Self-Employed</li>
                                             <ul class="description">
-                                                 <li>-Home Service Technicians</li>                                                                   
+                                                 <li>-Freelance Fullstack Web Developer</li>                                                                   
                                            </ul>
                                        </p>
                                   </ul>                      
