--- a/pages/about.html
+++ b/pages/about.html
@@ -87,12 +87,12 @@
                                 <div class="accordion-body">
                                       <ul>
                                            <p>
-                                               <li class="list">Present - Business Owner BossJo Electonics</li>
+                                               <li class="list">Present - Self-Employed</li>
                                                 <ul class="description">
-                                                     <li>-Home Service Technicians</li>                                            
+                                                  <li>-Freelance Fullstack Web Developer</li>                                            
                                                </ul>
                                            </p>
-                                      </ul>                      
+                                      </ul>                 
                                      <ul>
                                            <p>
                                                <li class="list">December 2020 to July 2022 - Total Transcription Solutions, Inc.</li>
