--- a/pages/blog.html
+++ b/pages/blog.html
@@ -82,19 +82,19 @@
              <div class="d-flex justify-content-around footercContainerMobileRes">
                      <div class="d-flex flex-row mb-3 footerNavMobileRes">
                            <div class="p-2">
-                             <a class="nav-link active"  href="../index.html">Home</a>
+                             <a class="nav-link nav-link nav-header"  href="../index.html">Home</a>
                            </div>
                            <div class="p-2">
-                             <a class="nav-link"   href="./about.html">About</a>
+                             <a class="nav-link nav-link nav-header"   href="./about.html">About</a>
                            </div>
                            <div class="p-2">
-                             <a class="nav-link" href="./projects.html" >Projects</a>
+                             <a class="nav-link nav-link nav-header" href="./projects.html" >Projects</a>
                            </div>
                            <div class="p-2">
-                             <a class="nav-link" aria-current="page" href="#">Blog</a>
+                             <a class="nav-link nav-link nav-header active" aria-current="page" href="#">Blog</a>
                            </div>
                            <div class="p-2">
-                             <a class="nav-link" href="./contact.html">Contact</a>
+                             <a class="nav-link nav-link nav-header" href="./contact.html">Contact</a>
                            </div>
                      </div>
                      <div class="d-flex flex-column">
