--- a/pages/contact.html
+++ b/pages/contact.html
@@ -26,20 +26,20 @@
                     <div class="collapse navbar-collapse mx-3" id="navbarNav">
                         <ul class="navbar-nav">
                           <li class="nav-item px-3">
-                            <a class="nav-link" href="../index.html">Home</a>
+                            <a class="nav-link nav-link nav-header" href="../index.html">Home</a>
                           </li>
                           <li class="nav-item px-3">
-                            <a class="nav-link" href="./about.html">About</a>
+                            <a class="nav-link nav-link nav-header" href="./about.html">About</a>
                           </li>
                           <li class="nav-item px-3">
-                            <a class="nav-link" href="./projects.html">Projects</a>
+                            <a class="nav-link nav-link nav-header" href="./projects.html">Projects</a>
                           </li>
                           <li class="nav-item px-3">
-                            <a class="nav-link" href="./blog.html">Blog</a>
+                            <a class="nav-link nav-link nav-header" href="./blog.html">Blog</a>
                           </li>
 
                           <li class="nav-item px-3">
-                            <a class="nav-link active" aria-current="page" href="#">Contact</a>
+                            <a class="nav-link nav-link nav-header active" aria-current="page" href="#">Contact</a>
                           </li>
                         </ul>
                     </div>
