--- a/pages/projects.html
+++ b/pages/projects.html
@@ -25,20 +25,20 @@
                           <div class="collapse navbar-collapse mx-3" id="navbarNav">
                               <ul class="navbar-nav">
                                 <li class="nav-item px-3">
-                                  <a class="nav-link" href="../index.html">Home</a>
+                                  <a class="nav-link nav-link nav-header" href="../index.html">Home</a>
                                 </li>
                                 <li class="nav-item px-3">
-                                  <a class="nav-link" href="./about.html">About</a>
+                                  <a class="nav-link nav-link nav-header" href="./about.html">About</a>
                                 </li>
                                 <li class="nav-item px-3">
-                                  <a class="nav-link active" aria-current="page" href="#">Projects</a>
+                                  <a class="nav-link nav-link nav-header active" aria-current="page" href="#">Projects</a>
                                 </li>
                                 <li class="nav-item px-3">
-                                  <a class="nav-link" href="./blog.html">Blog</a>
+                                  <a class="nav-link nav-link nav-header" href="./blog.html">Blog</a>
                                 </li>
       
                                 <li class="nav-item px-3">
-                                  <a class="nav-link" href="./contact.html">Contact</a>
+                                  <a class="nav-link nav-link nav-header" href="./contact.html">Contact</a>
                                 </li>
                               </ul>
                           </div>
