change bg color

--- a/index.html
+++ b/index.html
@@ -281,10 +281,10 @@
                            </ul>
                             <ul>
                                  <p>
-                                     <li class="list">Post Graduate</li>
+                                     <li class="list">College</li>
                                      <ul class="description">
                                             <li>Eastern Visayas State University</li>
-                                            <li>Post Graduate Diploma in Bachelor of Industrial Technology</li>
+                                            <li>Bachelor of Industrial Technology</li>
                                             <li>Major in Electronics</li>
                                             <li>2001-2004</li>
                                      </ul>
